[gd_scene load_steps=4 format=3 uid="uid://bk86wlashke5x"]

[ext_resource type="Script" path="res://Scripts/gui.gd" id="1_mkaq4"]

[sub_resource type="CanvasTexture" id="CanvasTexture_i7vso"]

[sub_resource type="CanvasTexture" id="CanvasTexture_suitv"]

[node name="GUI" type="Control"]
process_mode = 3
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mkaq4")

[node name="ScoreText" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 81.0
offset_bottom = 63.0
text = "Score: 0"
vertical_alignment = 1

[node name="BallsLeftText" type="Label" parent="."]
layout_mode = 1
offset_left = 720.0
offset_top = 40.0
offset_right = 781.0
offset_bottom = 63.0
text = "Balls: 0"
vertical_alignment = 1

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="PauseMenu"]
modulate = Color(0.407843, 0.407843, 0.407843, 0.286275)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_i7vso")

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="TextureRect" parent="PauseMenu/CenterContainer"]
self_modulate = Color(0.197937, 0.197937, 0.197937, 1)
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture = SubResource("CanvasTexture_suitv")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PauseBackButton2" type="Button" parent="PauseMenu/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="PauseMenuButton" type="Button" parent="PauseMenu/CenterContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Back to menu"

[node name="PauseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -40.0
offset_right = 48.0
offset_bottom = -8.0
grow_vertical = 0
text = "||"

[node name="ClickableArea" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -328.0
offset_right = 328.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="PauseMenu/CenterContainer/Panel/VBoxContainer/PauseBackButton2" to="." method="_on_pause_back_button_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/Panel/VBoxContainer/PauseMenuButton" to="." method="_on_pause_menu_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="button_up" from="ClickableArea" to="." method="_on_clickable_area_button_up"]
